# slotted-egraphs-artifact

./: .gitignore  .gitmodules  Dockerfile  README.md  build-image.sh  docker-entry.sh  pyproject.toml  use-image.sh
sdql/baseline/: Cargo.toml  README.md  bench.txt  gen_log2.txt  mttkrp.sh  mttkrp.txt
sdql/baseline/progs/: batax_2nd_esat.sexp  batax_v0.sexp  batax_v1.sexp  batax_v2_csr_coo_unfused.sexp  batax_v2_csr_coo_unfused_esat.sexp  batax_v7_csr_dense_unfused.sexp  mmm_sum_1st_esat.sexp  mmm_sum_v2_csr_csr_unfused_esat.sexp  mmm_sum_v4_csc_csr_unfused.sexp  mmm_sum_v4_csc_csr_unfused_esat.sexp  mmm_sum_v4_csc_dense_unfused_esat.sexp  mmm_sum_v4_dense_dense_unfused.sexp  mmm_sum_v4_dense_dense_unfused_esat.sexp  mmm_sum_v4_triecm_dense_unfused_esat.sexp  mmm_sum_v5_csr_csc_unfused.sexp  mmm_sum_v5_csr_dense_unfused_esat.sexp  mmm_sum_v5_dense_dense_unfused_esat.sexp  mmm_sum_v5_trie_dense_unfused_esat.sexp  mmm_sum_v7_csc_csr_unfused.sexp  mmm_v0.sexp  mmm_v3_csr_csc_unfused_esat.sexp  mmm_v3_csr_dense_unfused_esat.sexp  mmm_v3_dense_dense_unfused.sexp  mmm_v3_trie_dense_unfused.sexp  mmm_v7_csr_csr_unfused.sexp  mttkrp_2nd_bestcost.txt  mttkrp_v3_csf_csr_csc_unfused_esat.sexp  mttkrp_v3_csf_csr_dense_unfused.sexp  mttkrp_v3_csf_dense_dense_unfused_esat.sexp  sddmm_v1_csr_dense_dense_unfused.sexp  sddmm_v1_trie_dense_dense_unfused.sexp  sddmm_v1_trie_dense_dense_unfused_esat.sexp  ttm_v1.sexp  ttm_v1_csc.sexp  ttm_v1_csf_csr_unfused_esat.sexp  ttm_v1_csf_trie_unfused_esat.sexp  ttm_v3_csf_csc_unfused.sexp
sdql/baseline/sdqlite-eqsat/: Cargo.toml  README.md  run.sh  (+1 more)
(+5241 files in other folders)
