[package]
name = "sdqlite-eqsat"
version = "0.1.0"
authors = ["Amir Shaikhha <amir.shaikhha@ed.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbolic_expressions = "5"
# egg = "0.6.0"
egg = { path = "./egg" }
fxhash = "0.1.0"
log = "0.4"
instant = "0.1"
memory-stats = "1.0.0"

[dev-dependencies]
env_logger = {version = "0.7", default-features = false}

